--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+<section>
+    <h1>Section Title</h1>
+</section>
 <body>
     
 </body>
